--- a/build.gradle
+++ b/build.gradle
@@ -30,3 +30,6 @@ dependencies {
     // 'test.useTestNG()' to your build script.
     testCompile 'junit:junit:4.12'
 }
+
+task stage(dependsOn: ['build', 'clean'])
+build.mustRunAfter clean
