--- a/build.gradle
+++ b/build.gradle
@@ -5,8 +5,19 @@
  * user guide available at https://docs.gradle.org/3.0/userguide/tutorial_java_projects.html
  */
 
+buildscript {
+  repositories {
+    jcenter()
+  }
+  dependencies {
+    classpath "io.ratpack:ratpack-gradle:1.3.3"
+  }
+}
+
 // Apply the java plugin to add support for Java
 apply plugin: 'java'
+
+apply plugin: "io.ratpack.ratpack-groovy"
 
 // In this section you declare where to find the dependencies of your project
 repositories {
@@ -15,12 +26,18 @@ repositories {
     jcenter()
 }
 
+mainClassName = "Main"
+
 // In this section you declare the dependencies for your production and test code
 dependencies {
     // The production code uses the SLF4J logging API at compile time
     compile 'org.slf4j:slf4j-api:1.7.21'
     
     compile group: 'org.telegram', name: 'telegrambots', version: '2.4.4.1'
+    
+    compile "com.heroku.sdk:heroku-jdbc:0.1.1"
+    
+    compile "org.postgresql:postgresql:9.4-1201-jdbc4"
 
     // Declare the dependency for your favourite test framework you want to use in your tests.
     // TestNG is also supported by the Gradle Test task. Just change the
@@ -29,5 +46,6 @@ dependencies {
     testCompile 'junit:junit:4.12'
 }
 
-task stage(dependsOn: ['build', 'clean'])
-build.mustRunAfter clean
+task stage {
+  dependsOn installDist
+}
